Closed Bug 375861 Opened 17 years ago Closed 17 years ago

nsAppshellService shouldn't default to a hiddenWindow url that might not exist

Categories

(Toolkit :: Startup and Profile System, defect)

x86
macOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: Gijs, Assigned: Gijs)

References

Details

Attachments

(1 file, 1 obsolete file)

STR:

1. Start a xulrunner app without a browser.hiddenWindowChromeURL pref set, and that doesn't override chrome://global/content/hiddenWindow.xul.

Actual results:
2. Observe dialog that claims it can't find the file and find various "weirdities" in app functioning later on (cf. bug 372453)

Expected results:
2. No dialog, app attempts to function normally (latter is probably cause for other bugs, but just to get the dialog out of the way this should be fixed, I think).

Note that bug 297543 means we can't just turn it into about:blank (at least, as far as I can tell, that's what it means). It also makes me wonder why Mac uses a different thing from the rest of the world, and whether or not we can change that.

CC-ing bsmedberg for answers on the latter questions.
Blocks: 372453
Attached patch Patch to change to about:blank (obsolete) — Splinter Review
Patch that does actually change it to the same file that's used on Windows/Linux.

This makes life easier on apps without a hiddenWindow, though it's not all that needs to be done. The downside of this is that if there's no windows left, I *think* it will use the items from the last open window, and using any of them will probably crash the app. Then again, mac xulrunner should probably be fixed to just close the app if no more windows are open and there's no real hiddenWindow specified. Which is what the bug this is blocking is about, I guess.
Assignee: nobody → gijskruitbosch+bugs
Status: NEW → ASSIGNED
Attachment #260088 - Flags: first-review?(benjamin)
Comment on attachment 260088 [details] [diff] [review]
Patch to change to about:blank

Please unify this with the non-mac URL below.
Attachment #260088 - Flags: first-review?(benjamin) → first-review+
Attached patch Better PatchSplinter Review
Like this?
Attachment #260088 - Attachment is obsolete: true
Attachment #260224 - Flags: first-review?(benjamin)
Attachment #260224 - Flags: first-review?(benjamin) → first-review+
Whiteboard: [checkin needed]
Comment on attachment 260224 [details] [diff] [review]
Better Patch

Mano said I needed second-review, setting appropriate flags.
Attachment #260224 - Flags: second-review?(neil)
Whiteboard: [checkin needed]
Attachment #260224 - Flags: second-review?(neil) → second-review+
Checking in mozilla/xpfe/appshell/src/nsAppShellService.cpp;
/cvsroot/mozilla/xpfe/appshell/src/nsAppShellService.cpp,v  <--  nsAppShellService.cpp
new revision: 1.231; previous revision: 1.230
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Component: XRE Startup → Startup and Profile System
QA Contact: xre.startup → startup
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: