Bug 375861 - nsAppshellService shouldn't default to a hiddenWindow url that might not existfirst-r=benjamin@smedbergs.us (Benjamin Smedberg)second-r=neil@httl.net (Neil Rashbrook)